# Codiey

./: .env.example  .gitignore  README.md  __init__.py  app.py  parse_log.py  pyproject.toml
codebase/: chunker.py  dependency_graph.py  map_builder.py  repo_map.py  summary_builder.py  workspace.py
codiey/: cli.py
codiey/codebase/: __init__.py  parser.py  pattern_detector.py
codiey/static/: app.js  index.html  pcm-processor.js  styles.css
codiey/static/screens/: screen1-responding.html
docs/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-neural-vad-voice-gating.md  0003-audio-state-machine-tool-gate.md  0004-session-resumption.md  README.md
docs/architecture/: overview.md
docs/archive/debug-notes/: COMPLETE-FIX-SUMMARY.md  CRITICAL-FINDING-responseModalities.md  FINAL-ANALYSIS-1008.md  FIX-SUMMARY-1008.md  FIX-VAD-SETTINGS.md  PROMPT-FIX-TOOL-NARRATION.md  QUICK-FIX-REFERENCE.md  TESTING-1008-FIX.md
docs/plans/: PLAN-1-audio-pipeline.md  PLAN-2-session-resilience.md  PLAN-3-retrieval-redesign.md  codiey_implementation_plan.md
scripts/dev/: test_parser_quick.py  test_retrieval_quick.py  test_tools_quick.py  test_ts.py  test_ts2.py  test_ts3.py  test_ts_ast.py  test_ts_ast2.py
static/: app.js  index.html  styles.css
static/screens/: screen2-tool-call.html  screen3-listening.html
tools/: __init__.py  declarations.py  handlers.py
