[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codiey"
version = "0.2.0"
description = "Voice-first codebase thinking partner — talk to your code, interrupt to redirect."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "google-genai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "tree-sitter-javascript>=0.22.0",
    "tree-sitter-typescript>=0.22.0",
    "pydantic>=2.0.0",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.scripts]
codiey = "codiey.cli:main"

[tool.setuptools.packages.find]
include = ["codiey*"]

[tool.setuptools.package-data]
codiey = ["static/**/*"]
